--- a/styles.css
+++ b/styles.css
@@ -62,4 +62,12 @@ button {
 	font-size: 1.2rem;
 	padding: 14px 28px;
 	margin: 10px;
-	border: 3px solid #00ffff; /* borde llamativo
+	border: 3px solid #00ffff; 
+}
+
+#video {
+  visibility: hidden;
+  position: absolute;
+  width: 0;
+  height: 0;
+}
